# T-SafeTrace

./: High Level Application metrics-1660926678448.json  Makefile  Node - Requests Per Second-data-as-seriestocolumns-2022-08-19 18 32 25.csv  Node Request Duration (Stacked All Buckets)-data-as-seriestocolumns-2022-08-19 18 32 33.csv  Node Service Level Metrics Dashboard-1660926778655.json  NodeJS Application Dashboard-1660926657330.json  NodeJS Request Flow Dashboard-1660907975169.json  Panel Title-data-as-seriestocolumns-2022-08-23 17 29 30.csv  Panel Title-data-as-seriestocolumns-2022-08-23 17 29 54.csv  Performance test.ipynb  README.md  Rate (R) Number of requests per minute-data-as-seriestocolumns-2022-08-19 18 33 10.csv  Throughput-data-as-seriestocolumns-2022-08-19 18 31 42.csv  Throughput-data-as-seriestocolumns-2022-08-23 17 30 32.csv  boardinstr.sh  convert.ipynb  environment  log.txt  netdata-netdata-20220819-174438-1140.snapshot  netdata-netdata-20220823-161850-1140.snapshot  perf.txt  test.csv  test.jmx  test.json  testdata.json  thesis_env.sh
.github/workflows/: ci.yml
examples/acipher-rs/host/src/: main.rs
examples/acipher-rs/proto/src/: lib.rs
examples/acipher-rs/ta/: Xargo.toml
examples/acipher-rs/ta/src/: main.rs
examples/big_int-rs/host/: Cargo.toml
examples/big_int-rs/host/src/: main.rs
examples/diffie_hellman-rs/host/src/: main.rs
examples/diffie_hellman-rs/proto/src/: lib.rs
examples/diffie_hellman-rs/ta/: Xargo.toml
examples/diffie_hellman-rs/ta/src/: main.rs
examples/digest-rs/host/src/: main.rs
examples/ecdsa-rs/: uuid.txt
examples/ecdsa-rs/host/: Cargo.toml  Makefile
examples/ecdsa-rs/host/src/: main.rs  octal.rs
examples/ecdsa-rs/proto/: Cargo.toml  build.rs
examples/ecdsa-rs/proto/src/: lib.rs
examples/ecdsa-rs/ta/: Cargo.toml
examples/ecdsa-rs/ta/src/: main.rs
examples/ecdsa-rs/ta/src/dethmac/: mod.rs  nistp256.rs
examples/hello_world-rs/proto/src/: lib.rs
examples/hello_world-rs/ta/src/: main.rs
examples/hotp-rs/proto/src/: lib.rs
examples/hotp-rs/ta/src/: main.rs
examples/message_passing_interface-rs/proto/src/: lib.rs
examples/message_passing_interface-rs/ta/src/: main.rs
examples/performance/: uuid.txt
examples/performance/api-server/: index.js  package.json
examples/performance/api-server/promtheus_modules/node-application-monitoring-app/: Dockerfile  index.js
examples/performance/client/: data.json  index.js  log.txt  package-lock.json  package.json  script
examples/performance/client/scripts/: 2019_DECEMBER.json  2019_FEBRUARY.json  2019_JANUARY.json  data.json  jmeter_data.json  locations.js
examples/performance/host/: Cargo.toml  Makefile
examples/performance/host/src/: main.rs
examples/performance/host/src/crypt/: authenticated.rs  host_ecdsa.rs  hotp.rs
examples/performance/host/src/networking/: Ipc_Listener.rs  handling.rs  messages.rs
examples/performance/proto/src/: lib.rs
examples/performance/ta/: Cargo.toml
examples/performance/ta/src/: main.rs
examples/performance/ta/src/crypto/: context.rs  mod.rs  nistp256.rs  randomGen.rs  ta_hotp.rs  ta_keygen.rs
examples/performance/ta/src/storage/: data.rs  mod.rs  trusted_keys.rs
examples/serde-rs/proto/src/: lib.rs
examples/serde-rs/ta/src/: main.rs
examples/track/: uuid.txt
examples/track-rs/api-server/: index.js  package-lock.json  package.json
examples/track-rs/client/: index.js  package-lock.json  package.json
examples/track-rs/client/scripts/: 2019_AUGUST.json  data.json  locations.js
examples/track-rs/host/: Cargo.toml  Makefile
examples/track-rs/host/src/: host_ecdsa.rs  host_keygen.rs  main.rs
examples/track-rs/host/src/UserInterface/: create.rs
examples/track-rs/host/src/crypt/: authenticated.rs  host_ecdsa.rs  host_keygen.rs  hotp.rs  mod.rs
examples/track-rs/host/src/data/: authenticated.rs  mod.rs  randomGen.rs  report.rs  storage.rs
examples/track-rs/host/src/networking/: Ipc_Listener.rs  handling.rs  messages.rs  mod.rs
examples/track-rs/proto/src/: lib.rs
examples/track-rs/ta/: Cargo.toml  ta_arm.lds
examples/track-rs/ta/src/: main.rs  unix.rs
examples/track-rs/ta/src/crypto/: authenticated.rs  context.rs  mod.rs  nistp256.rs  ta_hotp.rs  ta_keygen.rs
examples/track-rs/ta/src/storage/: data.rs  mod.rs  objects.rs  trusted_keys.rs
examples/track-rs/ta/src/tcplistener/: tcpconnect.rs
examples/track/host/: Cargo.toml  Makefile
examples/track/host/src/: host_ecdsa.rs  host_keygen.rs  hotp.rs  key_gen.rs  main.rs  unix.rs
examples/track/host/src/data/: mod.rs  storage.rs
examples/track/host/src/networking/: mod.rs  tcpListner.rs
examples/track/proto/src/: lib.rs
examples/track/ta/: Cargo.toml
examples/track/ta/src/: ecdsa.rs  keys.rs  main.rs  ta_hotp.rs  ta_keygen.rs
examples/track/ta/src/crypto/: context.rs  mod.rs  nistp256.rs  randomGen.rs  ta_hotp.rs  ta_keygen.rs
examples/track/ta/src/tcplistener/: mod.rs
examples/utils/: Makefile  uuid.txt
examples/utils/host/: Cargo.toml  Makefile
examples/utils/host/src/: lib.rs  main.rs
examples/utils/proto/: Cargo.toml
examples/utils/ta/: Cargo.toml  Xargo.toml
examples/utils/ta/src/: main.rs
optee-utee/: Cargo.toml  Xargo.toml
optee-utee/macros/src/: lib.rs
optee-utee/optee-utee-sys/: Cargo.toml
optee-utee/optee-utee-sys/src/: lib.rs  tee_api.rs  tee_api_defines.rs  tee_internal_api_extensions.rs  tee_tcpsocket.rs  tee_udpsocket.rs  user_ta_header.rs
optee-utee/src/: crypto_op.rs  lib.rs  object.rs
optee-utee/systest/: Cargo.toml
