[package]
name = "ta"
version = "0.1.0"
authors = ["Zanele <zkubheka95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
libc = { path = "../../../rust/libc" }
proto = { path = "../proto" }
optee-utee-sys = { path = "../../../optee-utee/optee-utee-sys" }
optee-utee = { path = "../../../optee-utee" }
hex-literal = {version = "0.3.3"}
rand_core = { version = "0.6", default-features = false }
ecdsa = { version = "0.12", default-features = false, features = ["sign"] }
p256 = { version = "0.9", default-features = false, features = ["ecdsa-core", "arithmetic"] }
signature = { version = "1.2.0", features = ["derive-preview"] }
elliptic-curve = { version = "0.10.6", default-features = false, features = ["dev"] }
sha2 = { version = "0.9", default-features = false }
[build_dependencies]
uuid = { version = "0.8" }
proto = { path = "../proto" }

#[dependencies.p256]
#version = "0.9.0"
#features = ["arithmetic", "ecdh", "ecdsa", "sha256"]
#optional = true



[profile.release]
lto = true
opt-level = 1

