[package]
name = "ta"
version = "0.1.0"
authors = ["Zanele <zkubheka95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
libc = { path = "../../../rust/libc" }
proto = { path = "../proto" }
optee-utee-sys = { path = "../../../optee-utee/optee-utee-sys" }
optee-utee = { path = "../../../optee-utee" }

[build_dependencies]
uuid = { version = "0.8" }
proto = { path = "../proto" }

#[dependencies.p256]
#version = "0.9.0"
#features = ["arithmetic", "ecdh", "ecdsa", "sha256"]
#optional = true



[profile.release]
lto = true
opt-level = 1

