[package]
name = "track-rs"
version = "0.1.0"
authors = ["Zanele <zkubheka95@gmail.com>"]
edition = "2018"

[[bin]]
name = "track_rs"
path = "src/main.rs"

[lib]
name = "track_rs"
path = "src/lib.rs"
[dependencies]
libc = "0.2.48"
proto = { path = "../proto" }
optee-teec = { path = "../../../optee-teec" }
futures = { version = "0.1.25", default-features = false }
tokio-zmq = "0.9.0"
zmq = {version = "0.9.0", features = ["vendored"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
rmp-serde = "0.14.0"
rustc-hex = "1.0.0"
log = "0.4.6"
failure = "0.1.3"
nanoid = "0.4.0"

[profile.release]
lto = true
