[package]
name = "ta"
version = "0.1.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
license = "Apache-2.0"
repository = "https://github.com/apache/incubator-teaclave-trustzone-sdk.git"
description = "An example of Rust OP-TEE TrustZone SDK."
edition = "2018"

#[[bin]]
#name = "ta"
#path = "src/main.rs"
#[lib]
#path = "src/lib.rs"
[dependencies]
libc = { path = "../../../rust/libc" }
proto = { path = "../proto" }
optee-utee-sys = { path = "../../../optee-utee/optee-utee-sys" }
optee-utee = { path = "../../../optee-utee" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc-hex = "1.0.0"
derive-new = "0.5.9"
bincode = "1.0"
lazy_static = "1.4.0"
[build_dependencies]
uuid = { version = "0.8" }
proto = { path = "../proto" }

[profile.release]
lto = true
opt-level = 1
