[package]
name = "ta"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies]
libc = { path = "../../../rust/libc" }
proto = { path = "../proto" }
optee-utee-sys = { path = "../../../optee-utee/optee-utee-sys" }
optee-utee = { path = "../../../optee-utee" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc-hex = "1.0.0"
[build_dependencies]
uuid = { version = "0.8" }
proto = { path = "../proto" }

[profile.release]
lto = true
opt-level = 1
